--- a/index.html
+++ b/index.html
@@ -313,11 +313,11 @@
 	</h1>
 	 
 	<p>
-		 <label for="field3">Nickname:</label> <input required="" id="field3" name="nick" placeholder="Ex: y0loo" type="text" /> <span class="right">Indique o nickname do membro que será reintegrado.</span> 
+		 <label for="field3">Nickname:</label> <input required="" id="field3" name="nick" placeholder="Ex: ???JUKA" type="text" /> <span class="right">Indique o nickname do membro que será reintegrado.</span> 
 	</p>
 	 
 	<p>
-		 <label for="field4">Permissão:</label> <input required="" id="field4" name="permissão" placeholder="Ex: graia1" type="text" /> <span class="right">Nickname do membro da liderança responsável pela reintegração.</span> 
+		 <label for="field4">Permissão:</label> <input required="" id="field4" name="permissão" placeholder="Ex: Nirvac" type="text" /> <span class="right">Nickname do membro da liderança responsável pela reintegração.</span> 
 	</p>
 	 
  
@@ -408,7 +408,7 @@
 	</p>
 	 
 	<p>
-		 <label for="field14">Permissão:</label> <input required="" id="field14" name="permissao" placeholder="Ex: graia1" type="text" /> <span class="right">Indique o nickname do membro da liderança que permitiu e está ciente da licença/reserva.</span> 
+		 <label for="field14">Permissão:</label> <input required="" id="field14" name="permissao" placeholder="Ex: Nirvac" type="text" /> <span class="right">Indique o nickname do membro da liderança que permitiu e está ciente da licença/reserva.</span> 
 	</p>
 	 
 	<p>
